avoid a notice at the top of the article to spill into the TOC

--- a/themes/geeky/assets/scss/_reflectoring.scss
+++ b/themes/geeky/assets/scss/_reflectoring.scss
@@ -76,6 +76,7 @@ h3 {
 }
 
 .notice {
+  clear: both; // to avoid spilling into the table of contents
   padding: 20px;
   h4 {
     margin-top: 0;
